added more links

--- a/MotorCycle/.obsidian/app.json
+++ b/MotorCycle/.obsidian/app.json
@@ -1,1 +1,11 @@
-{}
+{
+  "promptDelete": false,
+  "fileSortOrder": "byCreatedTimeReverse",
+  "alwaysUpdateLinks": true,
+  "pdfExportSettings": {
+    "pageSize": "A4",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
+}
