--- a/MotorCycle/.obsidian/workspace
+++ b/MotorCycle/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Metadata.md",
+            "file": "GoodRidingPractices.md",
             "mode": "source"
           }
         }
@@ -20,8 +20,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Torque&Power.md",
-            "mode": "preview"
+            "file": "Fuel&Emission.md",
+            "mode": "source"
           }
         }
       }
@@ -79,7 +79,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Metadata.md",
+                "file": "GoodRidingPractices.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -99,10 +99,15 @@
   },
   "active": "725d3a6a62f38b74",
   "lastOpenFiles": [
-    "Metadata.md",
+    "GoodRidingPractices.md",
+    "Fuel&Emission.md",
     "Engine.md",
+    "Brake.md",
+    "Transmission.md",
+    "HowBikesWork.md",
+    "Accessories.md",
     "Torque&Power.md",
     "Types of Motorcycles.md",
-    "Untitled.md"
+    "Metadata.md"
   ]
 }
